--- a/books/templates/author.html
+++ b/books/templates/author.html
@@ -1,18 +1,12 @@
-<html>
-  <head>
-    <title>An author</title>
-  </head>
-  <body>
-    {{ author.name }}
-    {% for book in author.books.all %}
-      {% if book.review %}
-        <div class="book">
-          <h3>{{ book.title }}</h3>
-          <p>By {% for author in book.authors.all %} {{ author.name }}{% endfor %}</p>
-          {% if book.is_favourite %}<p class="highlight">favourite</p>{% endif %}
-          <p>{{ book.review|linebreaks }}</p>
-        </div>
-      {% endif %}
-    {% endfor %}
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+  <h2>{{ author.name }}</h2>
+  {% for book in author.books.all %}
+    {% if book.review %}
+      {% include "book-detail.html" %}
+    {% endif %}
+  {% endfor %}
+
+{% endblock %}
