--- a/books/templates/authors.html
+++ b/books/templates/authors.html
@@ -1,10 +1,8 @@
-<html>
-  <head>
-    <title>Authors Page</title>
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block content %}
+
     {% for author in authors %}
       <h2>{{ author.name }}</h2>
     {% endfor %}
-  </body>
-</html>
+
+{% endblock %}
