Created links and added static resources

--- a/readit/templates/base.html
+++ b/readit/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html>
   <head>
@@ -5,10 +6,14 @@
     <meta charset="utf-8" />
     <meta name="description" content="My great book review site" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700|Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{% static 'css/normalise.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <div class="container">
       <header>
+        <img src="{% static 'img/logo.png' %}" alt="ReadIt!" class="logo" />
         <div class="welcome">
           {% if request.user.is_authenticated %}
             <p>Hello {{request.user.username|title }}, last logged in {{ request.user.last_login|date:"D d M Y" }}</p>
@@ -17,7 +22,12 @@
           {% endif %}
         </div>
       </header>
-      
+
+      <nav>
+        <a href="{% url 'books' %}">Books</a>
+        <a href="{% url 'authors' %}">Authors</a>
+      </nav>
+
       <main>
         {% block content %}{% endblock %}
       </main>
