--- a/books/templates/book-detail.html
+++ b/books/templates/book-detail.html
@@ -1,5 +1,5 @@
 <div class="book">
-  <h3>{{ book.title }}</h3>
+  <h3><a href="{% url 'book-detail' book.pk %}">{{ book.title }}</a></h3>
   <p>By {% for author in book.authors.all %} {{ author.name }}{% endfor %}</p>
   {% if book.is_favourite %}<p class="highlight">favourite</p>{% endif %}
   <p>{{ book.review|linebreaks }}</p>
