--- a/readit/templates/base.html
+++ b/readit/templates/base.html
@@ -26,6 +26,9 @@
       <nav>
         <a href="{% url 'books' %}">Books</a>
         <a href="{% url 'authors' %}">Authors</a>
+        {% if request.user.is_authenticated %}
+          <a href="{% url 'review-books' %}">Review Books</a>
+        {% endif %}
       </nav>
 
       <main>
